# rusty-notes

./: .env  .env.dist  README.md  docker-compose.yaml  mcd.lo1  mcd.loo  slumber.yml
back/: .env  .env.dist  Cargo.toml  Dockerfile
back/entity/: Cargo.toml
back/entity/src/: customer.rs  customer_list.rs  customer_notification.rs  friendships.rs  item.rs  item_type.rs  items.rs  lib.rs  list.rs  list_tag.rs  list_tag_list.rs  list_tags.rs  list_type.rs  list_type_item_type.rs  lists.rs  notification.rs  notification_notification_type.rs  notification_type.rs  notifications.rs  user_list.rs  user_notification.rs  users.rs
back/migration/src/: lib.rs  m20240520_200943_create_table_notification.rs  m20240520_200943_create_table_notifications.rs  m20240520_201004_create_table_notification_type.rs  m20240520_201034_create_table_notification_notification_type.rs  m20240520_201516_create_table_customer.rs  m20240520_201516_create_table_users.rs  m20240520_201533_create_table_customer_notification.rs  m20240520_201533_create_table_user_notification.rs  m20240520_201541_create_table_list.rs  m20240520_201541_create_table_lists.rs  m20240520_201551_create_table_customer_list.rs  m20240520_201551_create_table_user_list.rs  m20240520_201557_create_table_list_tag.rs  m20240520_201557_create_table_list_tags.rs  m20240520_201603_create_table_list_tag_list.rs  m20240520_201630_create_table_list_type.rs  m20240520_201714_create_table_item.rs  m20240520_201714_create_table_items.rs  m20240520_201715_create_table_friendships.rs  m20240520_201718_create_table_item_type.rs  m20240520_201728_create_table_list_type_item_type.rs
back/migrations/2024-05-24-100722_create_list_type/: down.sql  up.sql
back/src/: main.rs  schema.rs
front/: .env  (+9 more)
(+138 files in other folders)
