[package]
name = "back_rusty_notes"
version = "0.1.0"
edition = "2021"
authors = ["Cyril Couffe <no-reply@rust-lang.org>"]

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "./entity" }
migration = { path = "./migration" }
actix-cors = "0.7.0"
actix-web = "4.5.1"
actix-web-middleware-keycloak-auth = "0.4.2"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
uuid = { version = "1.8.0", features = ["v4"] }
juniper = { version = "0.16.1", features = ["uuid"] }
juniper_actix = "0.5.0"

[dependencies.sea-orm]
version = "0.12.6"
features = ["debug-print", "runtime-tokio-rustls", "sqlx-postgres"]
